feat(intro): close current bounty program (ready for new bounty program)

--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -172,7 +172,7 @@
     },
     "end-event": {
       "title": "The bounty program has ended",
-      "content-1": "We are sorry to announce that we have distributed all the designated tokens to 25,000 individuals. For additional information and follow-up schedules, stay connected us in the telegram group.",
+      "content-1": "For additional information and follow-up schedules,\nstay connected us in the telegram group.",
       "content-2": "Thank you very much."
     }
   }
