--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -173,7 +173,7 @@
     },
     "end-event": {
       "title": "Muzika 에어드롭 이벤트가 마감되었습니다",
-      "content-1": "Muzika 에어드롭 참여자가 총 25,000명을 달성하여 이벤트가 마감되었습니다.",
+      "content-1": "Muzika 에어드롭 이벤트가 마감되었습니다.",
       "content-2": "추후 Muzika의 소식과 일정은 텔레그램에서 확인하실 수 있습니다."
     }
   }
