--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -172,7 +172,7 @@
     },
     "end-event": {
       "title": "MZK赏金计划项目已结束",
-      "content-1": "空投糖果仅有25,000名额，我们很遗憾地公布所有空投名额已满员。若您想要了解我们项目未来的最新动态与消息，请通过我们的官方电报群与我们保持联系。",
+      "content-1": "若您想要了解我们项目未来的最新动态与消息，\n请通过我们的官方电报群与我们保持联系。",
       "content-2": "MZK团队向您表达由衷的感谢"
     }
   }
