refactor(intro): replace word

--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -28,7 +28,7 @@
     "challenge-item-3": "音乐产业链内的中间商（发行商与音乐平台）正享受着简易的“转移输送”任务而带来的长期持久的丰厚回报。",
     "subtitle-2": "Muzika将创新引入数字音乐产业中的价值链",
     "solution-desc": "我们将改革与升级音乐产业中的价值创造与分配，在把奖励与回报从“转移”价值者（中间商）那里回馈到真正创造价值者手中的同时，通过区块链技术恢复原先因数字盗版等问题而产生的产业损失。",
-    "title-2": "Muzika的与总不同之处",
+    "title-2": "Muzika的与众不同之处",
     "different-1-short": "先前类似尝试无法保证足够大的基础用户基数",
     "different-1-long": "之前类似的音乐区块链项目忽略了基础用户量在大规模应用普及中的重要性，虽验证了通过智能合约等技术能将更多比率的利润回馈给音乐艺人的可行性，但对音乐艺人而言，从传统音乐流媒体渠道得到的低佣金率要远比使用智能合约的高佣金率更诱人，举个例子来说，通过iTunes得到1,000美元中10%的回报要远比通过缺少足够用户量的智能合约交易而得到1美元中的90%要好得多。",
     "different-1-image-caption": "小基础用户基数平台的高佣金率 V.S. 大基础用户基数平台的低佣金率",
