--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -81,7 +81,7 @@
   },
   "intro-business": {
     "title": "WE ARE NOT STARTING FROM SCRATCH",
-    "subtitle": "MAPIACOMPANY, Glboal No. 1 Instrumental Music Platform",
+    "subtitle": "MAPIACOMPANY, Global No. 1 Instrumental Music Platform",
     "year-of-exp": "년의 경험",
     "user-nations": "서비스되는 국가의 수",
     "users": "사용자",
