--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -81,7 +81,7 @@
   },
   "intro-business": {
     "title": "WE ARE NOT STARTING FROM SCRATCH",
-    "subtitle": "MAPIACOMPANY, Glboal No. 1 Instrumental Music Platform",
+    "subtitle": "MAPIACOMPANY, Global No. 1 Instrumental Music Platform",
     "year-of-exp": "Years of experience",
     "user-nations": "User nations",
     "users": "Users",
