--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -175,5 +175,10 @@
       "content-1": "For additional information and follow-up schedules,\nstay connected us in the telegram group.",
       "content-2": "Thank you very much."
     }
+  },
+  "sound": {
+    "main-title-1": "ONE-OF-A-KIND MUSIC APP",
+    "main-title-2": "Free streaming, and much more",
+    "main-desc": "지금 받으면 평생 무료 (기간 한정)"
   }
 }
