--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -176,5 +176,10 @@
       "content-1": "Muzika 에어드롭 이벤트가 마감되었습니다.",
       "content-2": "추후 Muzika의 소식과 일정은 텔레그램에서 확인하실 수 있습니다."
     }
+  },
+  "sound": {
+    "main-title-1": "처음 만나는 음악 어플",
+    "main-title-2": "무료는 시작일 뿐이다",
+    "main-desc": "지금 받으면 평생 무료 (기간 한정)"
   }
 }
