refactor(streaming): support streaming sound intro website

--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -177,8 +177,8 @@
     }
   },
   "sound": {
-    "main-title-1": "ONE-OF-A-KIND MUSIC APP",
-    "main-title-2": "Free streaming, and much more",
+    "main-title-1": "처음 만나는 음악 어플",
+    "main-title-2": "무료는 시작일 뿐이다",
     "main-desc": "지금 받으면 평생 무료 (기간 한정)"
   }
 }
