--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -175,5 +175,10 @@
       "content-1": "若您想要了解我们项目未来的最新动态与消息，\n请通过我们的官方电报群与我们保持联系。",
       "content-2": "MZK团队向您表达由衷的感谢"
     }
+  },
+  "sound": {
+    "main-title-1": "처음 만나는 음악 어플",
+    "main-title-2": "무료는 시작일 뿐이다",
+    "main-desc": "지금 받으면 평생 무료 (기간 한정)"
   }
 }
